# urineri.github.io

./: .gitignore  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: cv.md  index.md  my_pubs_supplemented_20250506_194029.bibtex  publications.md  software.json  software.md
docs/blog/: index.md
docs/blog/posts/: breaking_eco_chambers.md
docs/javascripts/: software.js
docs/stylesheets/: extra.css
scripts/: update_publications.py  update_software.py
site/: 404.html  index.html  my_gits.lst  my_pubs.bibtex  my_pubs_supplemented_20250506_173825.bibtex  my_pubs_supplemented_20250620_144631.bibtex  my_pubs_supplemented_20251110_143923.bibtex  my_pubs_supplemented_20260615_093042.bibtex  sitemap.xml  software.json
site/blog/: index.html
site/blog/archive/2025/: index.html
site/blog/breaking-eco-chambers/: index.html
site/blog/category/community/: index.html
site/blog/category/research/: index.html
site/cv/: index.html
site/publications/: index.html
site/rdrp_summit_location_redirect/: index.html
site/search/: search_index.json
site/software/: index.html
